added See it in the action and Webflow conf 2022 picture

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,6 +46,33 @@ nav h3{
     margin-bottom: 40px;
 }
 
+.baba-1{
+    display: flex;
+    justify-content: space-between;
+    padding: 157px 140px 157px 160px;
+    align-items: center;
+
+}
+
+.web-22{
+    border-radius: 48px;
+}
+
+.h2-all{
+    padding-bottom: 23px;
+    font-size:42px;
+    font-weight: bold;
+}
+.p-all{
+    padding-bottom: 23px;
+    font-size:24;
+    color: #252432;
+}
+
+
+
+
+
 
 
 
