--- a/styles/styles.css
+++ b/styles/styles.css
@@ -112,10 +112,9 @@ main{
 }
 
 .baba-2-users{
-    
     display: flex;
     align-items: center;
-    
+    justify-content: space-around;
     padding-top: 40px;
 }
 
